<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kot.noughtsandcrosses.MainActivity">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineH015"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/rg"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rb1"

                    android:text="@string/rb1"
                    android:layout_marginRight="8dp"
                    />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rb2"
                    />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rb3"
                    android:text="@string/rb3"
                    />

            </RadioGroup>
        </LinearLayout>



    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV005"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="19dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV035"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="135dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV070"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="250dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV095"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="365dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineH015"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        tools:layout_editor_absoluteY="77dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineH040"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="205dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineH065"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        tools:layout_editor_absoluteY="332dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineH090"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteY="460dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/ivTopLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH040"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV005"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV035"
        app:layout_constraintTop_toTopOf="@+id/guidelineH015"
        app:srcCompat="@android:color/white"
        />

    <ImageView
        android:id="@+id/ivTopCenter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH040"

        app:layout_constraintLeft_toLeftOf="@+id/guidelineV035"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV070"
        app:layout_constraintTop_toTopOf="@+id/guidelineH015"

        app:srcCompat="@android:color/white" />

    <ImageView
        android:id="@+id/ivTopRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH040"

        app:layout_constraintLeft_toLeftOf="@+id/guidelineV070"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV095"
        app:layout_constraintTop_toTopOf="@+id/guidelineH015"

        app:srcCompat="@android:color/white" />

    <ImageView
        android:id="@+id/ivCenterLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH065"

        app:layout_constraintLeft_toLeftOf="@+id/guidelineV005"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV035"
        app:layout_constraintTop_toTopOf="@+id/guidelineH040"

        app:srcCompat="@android:color/white" />




    <ImageView
        android:id="@+id/ivCenter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH065"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV035"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV070"
        app:srcCompat="@android:color/white"
        app:layout_constraintTop_toTopOf="@+id/guidelineH040" />

    <ImageView
        android:id="@+id/ivCenterRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH065"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV070"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV095"
        app:layout_constraintTop_toTopOf="@+id/guidelineH040"
        app:srcCompat="@android:color/white"
        />

    <ImageView
        android:id="@+id/ivBottomLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH090"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV005"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV035"
        app:layout_constraintTop_toTopOf="@+id/guidelineH065"
        app:srcCompat="@android:color/white" />

    <ImageView
        android:id="@+id/ivBottomCenter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH090"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV035"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV070"
        app:layout_constraintTop_toTopOf="@+id/guidelineH065"
        app:srcCompat="@android:color/white" />

    <ImageView
        android:id="@+id/ivBottomRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH090"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV070"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV095"
        app:layout_constraintTop_toTopOf="@+id/guidelineH065"
        app:srcCompat="@android:color/white" />

    <View
        android:layout_width="4dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/ivTopLeft"
        app:layout_constraintRight_toLeftOf="@+id/ivTopCenter"
        app:layout_constraintTop_toTopOf="@+id/guidelineH015"


        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH090" />

    <View
        android:layout_width="4dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/ivTopCenter"
        app:layout_constraintRight_toLeftOf="@+id/ivTopRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineH015"


        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH090" />

    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV005"

        app:layout_constraintTop_toBottomOf="@+id/ivTopLeft"
        app:layout_constraintBottom_toTopOf="@+id/ivCenterLeft"


        android:background="@color/colorPrimary"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV095" />

    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV005"

        app:layout_constraintTop_toBottomOf="@+id/ivCenterLeft"
        app:layout_constraintBottom_toTopOf="@+id/ivBottomLeft"


        android:background="@color/colorPrimary"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV095" />

    <ProgressBar
        android:id="@+id/progressBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV005"
        app:layout_constraintRight_toLeftOf="@+id/btnClear"
        android:layout_marginRight="0dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineH090"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear"
            android:text="@string/btnClear"


            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineH090"
            android:layout_marginTop="0dp" />




</android.support.constraint.ConstraintLayout>
